--- a/pages/Guias.html
+++ b/pages/Guias.html
@@ -51,7 +51,7 @@
                      <li class="GuideLink"><a href="" target="_blank"></a></li>
                      <li class="GuideImg-TWWS02Overview"></li>
                 </div>
-                <div class="GuiaAutor">b<p>by Karyon </p><p> 22/06/2025 </p></div>
+                <div class="GuiaAutor"><p>by Karyon </p><p> 22/06/2025 </p></div>
 
                 <div class="ProfilePic_Karyon"></div>
                 <div class="ItemGuia"> <ul>
